ajout consignes prof pour évaluation in domain

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -535,14 +535,6 @@
   },
   {
    "source": [
-    "### Précision sur mots hors vocabulaire\n",
-    "Suite à ces tests, on peut imaginer que la précision sur les mots hors-vocabulaire doit être très faible, car les autres caractéristiques semblent insuffisantes. Testons cette hypothèse. ASSEZ COMPLIQUE A TESTER CAR IL FAUT RECUPERER LE MOT DANS LA CLEF DU VECTEUR \"mot - truc\". Avec des regex ? Est-ce très important vu ce qu'on dit avant ?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
     "### Erreurs fréquentes\n",
     "On peut analyser les erreurs les plus fréquentes à l'aide d'une matrice de confusion."
    ],
@@ -584,11 +576,6 @@
    ]
   },
   {
-   "source": [],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "source": [
     "Analyse de la matrice de confusion...."
    ],
@@ -597,7 +584,18 @@
   },
   {
    "source": [
-    "## Evaluation sur le corpus Test"
+    "### Précision sur mots hors vocabulaire\n",
+    "Suite à nos tests sur les différentes caractéristiques, on peut imaginer que la précision sur les mots hors-vocabulaire doit être très faible, car les autres caractéristiques semblent insuffisantes. Testons cette hypothèse. ASSEZ COMPLIQUE A TESTER CAR IL FAUT RECUPERER LE MOT DANS LA CLEF DU VECTEUR \"mot - truc\". Avec des regex ? Est-ce très important vu ce qu'on dit avant sur le \"poids\" des caractéristiques ?\n",
+    "\n",
+    "Consignes du prof : \"Évaluation des performances du classifieur et des erreurs fréquentes. On distinguera notamment les performances obtenus sur les mots vue en apprentissage et sur les mots n'apparaissant qu'en test (mot hors vocabulaire).\""
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Evaluation sur le corpus Test\n",
+    "Faire plusieurs évaluations pour faire une \"moyenne\" ?"
    ],
    "cell_type": "markdown",
    "metadata": {}
