mini modif rédaction

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "source": [
-    "## Evaluation des performances sur le corpus de validation (Dev)\n",
+    "# Evaluation des performances sur le corpus de validation (Dev)\n",
     "La fonction test() renvoie le taux d'erreur sur un corpus en utilisant la fonction predict() avec les poids issus de l'apprentissage. On effectue ce test sur le corpus dev avec différents nombres d'itération à l'apprentissage (entre 1 et 9) pour voir l'impact des itérations sur ce taux d'erreur."
    ],
    "cell_type": "markdown",
