--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {
     "tags": []
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -220,29 +220,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def add_gold(features, corpus):\n",
+    "def add_gold(features, corpus, addMot=False):\n",
     "    '''Ajoute les gold labels pour créer un corpus d'entraînement / de test'''\n",
     "    i = 0\n",
     "    gold_corpus = []\n",
     "    for phrase in corpus:\n",
     "        for word, pos_gold in zip(phrase[\"mots\"],phrase[\"gold_labels\"]):\n",
-    "            gold_corpus.append((features[i], pos_gold))\n",
+    "            if addMot:\n",
+    "                gold_corpus.append((features[i], pos_gold, word))\n",
+    "            else:\n",
+    "                gold_corpus.append((features[i], pos_gold))\n",
     "            i += 1\n",
     "\n",
-    "    return gold_corpus\n",
-    "\n",
-    "gsd_train_features_gold = add_gold(gsd_train_features, gsd_train)"
+    "    return gold_corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +255,7 @@
     }
    ],
    "source": [
+    "gsd_train_features_gold = add_gold(gsd_train_features, gsd_train)\n",
     "print(*gsd_train_features_gold[100:110], sep=\"\\n\")"
    ]
   },
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {
     "tags": []
    },
@@ -293,7 +295,7 @@
    "source": [
     "from random import shuffle\n",
     "\n",
-    "def perceptron_train(training_set, voc, MAX_EPOCH=3):\n",
+    "def perceptron_train(training_set, MAX_EPOCH=3):\n",
     "    \n",
     "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
     "\n",
@@ -332,13 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 84,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "poids_gsd_train = perceptron_train(gsd_train_features_gold, gsd_train_features)"
+    "poids_gsd_train = perceptron_train(gsd_train_features_gold)"
    ]
   },
   {
@@ -462,24 +464,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poids_gsd_train = perceptron_train(gsd_train_features_gold, gsd_train_features) # entraînement avec nombre d'itérations par défaut"
+    "poids_gsd_train = perceptron_train(gsd_train_features_gold) # entraînement avec nombre d'itérations par défaut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test avec seulement les mots : 9.752%\n",
-      "Test avec tout sauf les mots : 71.333%\n"
+      "Test avec seulement les mots : 9.619%\n",
+      "Test avec tout sauf les mots : 69.782%\n"
      ]
     }
    ],
@@ -584,10 +586,75 @@
   },
   {
    "source": [
-    "### Précision sur mots hors vocabulaire\n",
-    "Suite à nos tests sur les différentes caractéristiques, on peut imaginer que la précision sur les mots hors-vocabulaire doit être très faible, car les autres caractéristiques semblent insuffisantes. Testons cette hypothèse. ASSEZ COMPLIQUE A TESTER CAR IL FAUT RECUPERER LE MOT DANS LA CLEF DU VECTEUR \"mot - truc\". Avec des regex ? Est-ce très important vu ce qu'on dit avant sur le \"poids\" des caractéristiques ?\n",
+    "### Précision sur mots hors vocabulaire d'apprentissage"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def getVoc(corpus):\n",
+    "    '''Renvoie le vocabulaire (set)'''\n",
+    "    voc = set()\n",
+    "    for phrase in corpus:\n",
+    "        for mot in phrase[\"mots\"]:\n",
+    "            voc.add(mot)\n",
+    "    return voc\n",
     "\n",
-    "Consignes du prof : \"Évaluation des performances du classifieur et des erreurs fréquentes. On distinguera notamment les performances obtenus sur les mots vue en apprentissage et sur les mots n'apparaissant qu'en test (mot hors vocabulaire).\""
+    "def test_hors_voc(features_gold_mot, poids, voc):\n",
+    "    \"\"\"Prédit les étiquettes des mots hors vocabulaire et renvoie un taux d'erreur\"\"\"\n",
+    "    nb_erreurs_hors_voc = 0\n",
+    "    nb_erreurs_in_voc = 0\n",
+    "\n",
+    "    mots_hors_voc=0\n",
+    "    mots_in_voc = 0\n",
+    "\n",
+    "    for vec, gold, mot in features_gold_mot:\n",
+    "        if mot in voc:\n",
+    "            mots_in_voc +=1\n",
+    "            prediction = predict(vec, poids)\n",
+    "            if not gold == \"_\" and not prediction == gold:\n",
+    "                nb_erreurs_in_voc +=1\n",
+    "        else:\n",
+    "            mots_hors_voc +=1\n",
+    "            prediction = predict(vec, poids)\n",
+    "            if not gold == \"_\" and not prediction == gold:\n",
+    "                # print(mot, vec, prediction, gold, sep=\"\\t\", end=\"\\n\")\n",
+    "                nb_erreurs_hors_voc +=1\n",
+    "\n",
+    "\n",
+    "    return (nb_erreurs_hors_voc/mots_hors_voc, nb_erreurs_in_voc/mots_in_voc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Taux d'erreur hors voc : 21.043%\nTaux d'erreur dans voc : 3.645%\n"
+     ]
+    }
+   ],
+   "source": [
+    "gsd_dev_features_gold_mot = add_gold(gsd_dev_features, gsd_dev, addMot=True)\n",
+    "resultats_test_voc = test_hors_voc(gsd_dev_features_gold_mot, poids_gsd_train, getVoc(gsd_train))\n",
+    "print(f\"Taux d'erreur hors voc : {resultats_test_voc[0]:.3%}\")\n",
+    "print(f\"Taux d'erreur dans voc : {resultats_test_voc[1]:.3%}\")"
+   ]
+  },
+  {
+   "source": [
+    "Le taux d'erreur sur les mots non présents dans le vocabulaire d'apprentissage est très élevé (plus de 20%) tandis que celui sur les mots présents dans le vocabulaire d'apprentissage est très bas. Le perceptron se repose beaucoup sur l'association des mots à leur catégorie grammaticale, par rapport aux autres caractéristiques."
    ],
    "cell_type": "markdown",
    "metadata": {}
