ajout corpus hors-domaine

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -24,8 +24,7 @@
  "cells": [
   {
    "source": [
-    "# Projet TAL M1 S1 : POS Tagging\n",
-    "structure du projet expliqué ici : https://u-paris.zoom.us/rec/share/rFB-gp7vkgMK31kfPxEsyNF2k6q7mHcq3P9MQiovimkr9ebIewZpuD62RBk6SmM.31Mmzx1VyMqQXRtu?startTime=1607605609000"
+    "# Projet TAL M1 S1 : POS Tagging"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -664,7 +663,8 @@
   },
   {
    "source": [
-    "## Evaluation sur le corpus Test"
+    "## Evaluation sur le corpus Test\n",
+    "Après un apprentissage avec l'ensemble des caractéristiques et 3 itérations sur le corpus d'apprentissage, on obtient un taux d'erreur de moins de 5% lors de l'évaluation sur le corpus test."
    ],
    "cell_type": "markdown",
    "metadata": {}
