Mise à jour perceptron, prise en compte mail de Wisniewski

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -305,32 +305,54 @@
     "    w = {}\n",
     "    for tag in tags:\n",
     "        w[tag] = {}\n",
+    "\n",
+    "    n_update = 0 # nombre de mots sur lequel l'entraînement a été effectué\n",
+    "\n",
+    "    last_update = {} # dictionnaire de dictionnaire suivant la même structure que les vecteurs de poids a et w\n",
+    "    # et qui stocke la valeur de n lors de la dernière modification d'un poid\n",
+    "    for tag in tags:\n",
+    "        last_update[tag] = {}\n",
     "    \n",
     "    for i in range(0, MAX_EPOCH):\n",
     "        shuffled_set = training_set.copy() # copie du training set\n",
     "        shuffle(shuffled_set) # mélange du training set\n",
     "\n",
     "        for word in shuffled_set:\n",
+    "            n_update += 1 # on compte le nb de mots déjà vus\n",
+    "\n",
     "            vec = word[0]\n",
     "            gold = word[1]\n",
     "            prediction = predict(vec, w) # trouve étiquette plus probable avec les poids w\n",
     "            if not gold == \"_\" and not prediction == gold: # si le gold_label n'est pas égal à celui prédit\n",
     "                # on ignore les mots dont le gold_label est \"_\" (\"au\" et \"du\") car ils sont ensuite analysés comme \"à le\" et \"de le\"\n",
     "                for feat in vec: # pour chaque feature du mot\n",
+    "\n",
+    "                    # on met à jour a : ajout de l'ancienne valeur * le nombre de fois où elle n'a pas été modifiée\n",
+    "                    a[gold][feat] = a[gold].get(feat, 0) + w[gold].get(feat,0)*(n_update-last_update[gold].get(feat,0))\n",
+    "                    a[prediction][feat] = a[prediction].get(feat, 0) + w[prediction].get(feat,0)*(n_update-last_update[gold].get(feat, 0))\n",
+    "\n",
+    "                    # on modifie les poids de w pour les 2 étiquettes concernées\n",
     "                    w[gold][feat] = w[gold].get(feat,0) + vec.get(feat) #  on ajoute x(i) à chaque poids de l'étiquette correcte\n",
     "                    w[prediction][feat] = w[prediction].get(feat,0) - vec[feat] #  on retire x(i) à chaque poids de l'étiquette mal prédite\n",
-    "        \n",
-    "    # on ajoute w à a\n",
+    "\n",
+    "                    # on modifie le dernier update de l'élément du vecteur\n",
+    "                    last_update[gold][feat] = n_update\n",
+    "                    last_update[prediction][feat] = n_update\n",
+    "\n",
+    "        # à la fin d'une itération sur le corpus\n",
+    "        # mise à jour tous les poids qui n'ont pas été modifiés lors de la dernière update\n",
     "        for tag in w:\n",
-    "            for index in w[tag].keys(): \n",
-    "                a[tag][index] = a[tag].get(index, 0) + w[tag][index]\n",
+    "            for feat in w[tag].keys():\n",
+    "                if last_update[tag][feat] < n_update: \n",
+    "                    a[tag][feat] = a[tag].get(feat, 0) + w[tag][feat]*(n_update - last_update[tag].get(feat,0))\n",
+    "        \n",
     "\n",
     "    return a\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
