ajout éval hors domaine

--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "source": [
-    "On remarque qu'à partir de 2 ou 3 itérations on descend en dessous de 5% d'erreurs, mais que des itérations additionnelles n'améliorent pas beaucoup ce taux, en tout cas pas assez par rapport au temps additionnel que demande l'entraînement avec ces itérations additionnelles. Nous choisissont donc 3 itérations par défaut."
+    "On remarque qu'à partir d'un seul passage sur le corpus, on descend en dessous de 5% d'erreurs, et qu'à 3 itérations on est environ à 4%. Des itérations additionnelles n'améliorent pas beaucoup ce taux, en tout cas pas assez par rapport au temps additionnel que demande l'entraînement avec ces itérations additionnelles. Nous choisissont donc 3 itérations par défaut."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -762,11 +762,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Prédictions  ADJ   ADP   ADV  AUX  CCONJ   DET  INTJ  NOUN  NUM  PRON  PROPN  \\\nRéférences                                                                     \nADJ          352     0    10    0      0     3     0    16    0     1      0   \nADP            0  1119     2    0      0     7     0     5    0     9      0   \nADV           12     7   853    0      2     1     0    10    0     1      0   \nAUX            0     0     0  519      0     0     0     1    0     0      0   \nCCONJ          0     0     8    1    319     0     0     0    0     0      0   \nDET            7     2     1    0      0  1141     0     3    1    27      0   \nINTJ          72     5    24   11      0    22     1   112    0    76      0   \nNOUN          29     0    31    0      0     0     0  1316    2     3      0   \nNUM            0     0     0    0      0     2     0     7   84     0      0   \nPRON          25     1    36    0      0    20     0     6    1  1491      0   \nPROPN          0     1     0    1      0     0     0    16    0     0    215   \nSCONJ          0     3    48    0      0     0     0     0    0     8      0   \nVERB          20     0     2   71      0     0     0    31    0     7      1   \nX              0     1     1    0      0     0     0     3    0    10      0   \nAll          517  1139  1016  603    321  1196     1  1526   88  1633    216   \n\nPrédictions  PUNCT  SCONJ  SYM  VERB    X    All  \nRéférences                                        \nADJ              0      0    0    30    1    413  \nADP              1      0    0     2    0   1145  \nADV              1      4    0     5    4    900  \nAUX              0      0    0    23    0    543  \nCCONJ            0      0    0     0    0    328  \nDET              0      0    0     1    0   1183  \nINTJ             0     16    0   171   92    602  \nNOUN             1      0    0    46    0   1428  \nNUM              2      0    0     6    2    103  \nPRON             5     22    0     7    1   1615  \nPROPN            0      0    0     0   10    243  \nSCONJ            0    243    0     0    0    302  \nVERB             4      0    1  1093    4   1234  \nX                6      1    1     0    0     23  \nAll             20    286    2  1384  114  10062  \n"
+     ]
+    }
+   ],
    "source": [
-    "### Corpus littéraire"
+    "matrice_confusion(oral_dev_features_gold, poids_gsd_train)"
+   ]
+  },
+  {
+   "source": [
+    "### Corpus vieux français"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Taux d'erreur sur corpus d'évaluation hors domaine (oral) : 49.724%\n"
+     ]
+    }
+   ],
+   "source": [
+    "old_dev = load_corpus(\"corpus-hors-domaine/old/fro_srcmf-ud-dev.conllu\")\n",
+    "old_dev_features = feature_extraction(old_dev)\n",
+    "old_dev_features_gold = add_gold(old_dev_features, old_dev)\n",
+    "\n",
+    "print(f\"Taux d'erreur sur corpus d'évaluation hors domaine (oral) : {test(old_dev_features_gold, poids_gsd_train):.3%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Prédictions   ADJ   ADP  ADV  AUX  CCONJ   DET  INTJ  NOUN  NUM  PART  PRON  \\\nRéférences                                                                    \nADJ           337     2    3    0      0     6     0   141    0     0     3   \nADP            97   950    2  284      6    49     0    18    4     0     8   \nADV           148   133  752    9     49    41     0   109  125     0   163   \nAUX           118     2   14  345      0     1     0   141    0     0    16   \nCCONJ           0     2   72    1    562    16     0     1    0     0     2   \nDET           110     1    1    8      0   955     0   135    2     1    51   \nINTJ            0     0    0    0      0     1     0     0    0     0     0   \nNOUN          696     5   38    4      1     5     4  1506    0     0    21   \nNUM            30     0    0    0      0     4     0    21   10     0     0   \nPRON           83    11   19   33     12   381     0   127    5     0  1170   \nPROPN           0     0    0    0      0     0     0     2    0     0     1   \nSCONJ          15     4   61    0      0     1     0     1    0     0   111   \nVERB          704     9   13  165      1     7     0   603    8     0    37   \nAll          2338  1119  975  849    631  1467     4  2805  154     1  1583   \n\nPrédictions  PROPN  PUNCT  SCONJ  SYM  VERB    X    All  \nRéférences                                               \nADJ             45      0      0    0   114   30    681  \nADP             48      1      1    1    99  136   1704  \nADV            133      0    204    0   174   63   2103  \nAUX              6      0      6    0   157   48    854  \nCCONJ           13      0      4   98    27   59    857  \nDET             41      7      6    0    67  263   1648  \nINTJ            13      0      0    0     0    1     15  \nNOUN           134      0      3    4   319   76   2816  \nNUM             23      0      0    0     4    8    100  \nPRON           144      4     81    2   165  178   2415  \nPROPN          617      0      0    0    12    0    632  \nSCONJ           28      1    294    0    15   13    544  \nVERB           129      0      6    0  1231   80   2993  \nAll           1374     13    605  105  2384  955  17362  \n"
+     ]
+    }
+   ],
+   "source": [
+    "matrice_confusion(old_dev_features_gold, poids_gsd_train)"
+   ]
   },
   {
    "source": [
