--- a/POStagging.ipynb
+++ b/POStagging.ipynb
@@ -100,6 +100,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
     "## Extraction des caractéristiques\n",
     "\n",
@@ -111,7 +118,7 @@
     "- est entièrement en majuscules\n",
     "- contient des chiffres\n",
     "- contient des caractères non alphanumériques\n",
-    "- longueur du mot (3 caractéristiques binaires) : a 1 seule caractère, a moins de 3 caractères, a plus de 3 caractères.\n",
+    "- longueur du mot (3 caractéristiques binaires) : a 1 seule caractère, a au plus 3 caractères, a plus de 3 caractères.\n",
     "- a un suffixe nominal\n",
     "- a un suffixe adjectival\n",
     "- a un suffixe verbal\n",
@@ -137,12 +144,6 @@
     "def feature_extraction(corpus, feat_mots=True, feat_maj=True, feat_non_alpha=True, feat_long=True, feat_suff=True):\n",
     "\n",
     "    corpus_features = []\n",
-    "    \"\"\"\n",
-    "    Listes à utiliser pour les lemmes :\n",
-    "    list_adj = [\"ain\", \"aine\",\"aire\",\"é\", \"ée\",\"iel\", \"uel\", \"lle\",  \"al\", \"ales\", \"al\", \"ial\",\"er\", \"ère\", \"ier\", \"esque\", \"eur\", \"euse\", \"ieux\",\"ueux\", \"if\",\"ive\", \"in\",\"ine\",\"ique\",\"atoire\", \"u\",\"ue\", \"issime\", \"able\",\"ible\", \"uble\", \"ième\",\"uple\"]\n",
-    "    list_noun = [\"ade\", \"age\",\"aille\", \"aison\", \"ison\",\"oison\", \"ation\", \"ition\",\"ssion\", \"sion\",\"xion\", \"isation\",\"ment\", \"ement\",\"erie\", \"ure\",\"ature\",\"at\", \"ance\",\"ence\", \"escence\",\"ité\", \"eté\",\"té\", \"ie\",\"erie\", \"esse\",\"ise\", \"eur\",\"isme\", \"iste\", \"seur\", \"isseur\", \"isateur\", \"euse\",\"isseuse\", \"atrice\",\"ier\",\"ière\", \"aire\",\"ien\", ienne\",\"iste\",er\",\"eron\",\"eronne\",\"trice\",\"oir\", \"oire\",\"ier\",\"ière\",\"erie\",\"anderie\", \"aire\",\"ain\",\"aille\", \"ée\", \"ard\",\"asse\", \"assier\",\"âtre\",\"aut\",\"eau\",\"ceau\", \"ereau\",\"eteau\", \"elle\", \"et\",\"elet\",\"ette\", \n",
-    "\"elette\",\"in\",\"otin\", \"ine\" \"illon\",\"on\", \"ille\", \"erole\",\"ole\",\"iche\"]\n",
-    "    \"\"\"\n",
     "\n",
     "    list_vb = [\"iser\",\"ifier\", \"oyer\",\"ailler\", \"asser\",\"eler\", \"eter\",\"iller\", \"iner\",\"nicher\", \"ocher\",\"onner\",\"otter\",\"oter\", \"ouiller\"]\n",
     "    list_adj = [\"ain\", \"aine\",\"ains\", \"aines\",\"aire\", \"aires\",\"é\", \"ée\",\"ées\", \"és\",\"iel\", \"iels\",\"uel\", \"uels\", \n",
@@ -172,7 +173,7 @@
     "                if word.isupper(): features_mot[\"all_caps\"] = 1\n",
     "\n",
     "            if feat_non_alpha:\n",
-    "                if any(char.isdigit() for char in word): features_mot[\"num\"] = 1# mieux que isnumeric(), car renvoie false si espace (40 000) ou virgule (50,6) par ex\n",
+    "                if any(char.isdigit() for char in word): features_mot[\"num\"] = 1 # mieux que isnumeric(), car renvoie false si espace (40 000) ou virgule (50,6) par ex\n",
     "                if not word.isalnum(): features_mot[\"nonAlphanum\"] = 1\n",
     "\n",
     "            if feat_long:\n",
@@ -186,9 +187,6 @@
     "                if any(word.endswith(elem) and len(word) != len(elem) for elem in list_adj): features_mot[\"suff_adj\"] = 1\n",
     "                if any(word.endswith(elem) for elem in list_vb): features_mot[\"suff_vb\"] = 1\n",
     "                # on vérifie la longueur du mot pour être sûr que ce soit un suffixe car on peut avoir le mot                      age avec le suffixe age par exemple ou bien aux\n",
-    "                # suff_noun : any(lemma.endswith(elem) and len(word) != len(elem) for elem in list_noun),\n",
-    "                # suff_adj : any(lemma.endswith(elem) for elem in list_adj),\n",
-    "                # suff_vb : any(lemma.endswith(elem) for elem in list_vb)\n",
     "            \n",
     "            # ajout au corpus\n",
     "            corpus_features.append(features_mot)\n",
@@ -293,7 +291,7 @@
     "from random import shuffle\n",
     "from collections import defaultdict \n",
     "\n",
-    "def perceptron_train(training_set, MAX_EPOCH=5):\n",
+    "def perceptron_train(training_set, MAX_EPOCH=3):\n",
     "    \n",
     "    tags = [\"ADJ\", \"ADP\", \"ADV\", \"AUX\", \"CCONJ\", \"DET\", \"INTJ\", \"NOUN\", \"NUM\", \"PART\", \"PRON\", \"PROPN\", \"PUNCT\", \"SCONJ\", \"SYM\", \"VERB\", \"X\"]\n",
     "\n",
@@ -336,7 +334,6 @@
     "                    # on modifie les poids de w pour les 2 étiquettes concernées\n",
     "                    w[gold][feat] += 1 #  on ajoute x_i à chaque poids de l'étiquette correcte\n",
     "                    w[prediction][feat] -= 1 #  on retire x_i à chaque poids de l'étiquette mal prédite\n",
-    "\n",
     "                   \n",
     "\n",
     "    # mise à jour finale tous les poids qui n'ont pas été modifiés lors de la dernière update\n",
@@ -351,7 +348,7 @@
    "source": [
     "Pour éviter de mettre entièrement à jour a après chaque mot, puisque la grande majorité des poids reste inchangé, on stocke après chaque modification d'un poids l'index de sa dernière modification, ce qui permet de mettre à jour dans a seulement les vecteurs qui sont modifiés, en ajoutant dans a le poids correspondant dans w, multiplié par le nombre d'update pendant lesquels il n'a pas été modifié.\n",
     "\n",
-    "A la fin de l'apprentissage, on met également à jour tous les poids qui sont \"en attente\" de mise à jour, c'est-à-dire ceux dont la dernière mise à jour est inférieur à n_update."
+    "A la fin de l'apprentissage, on met également à jour tous les poids qui sont \"en attente\" de mise à jour, c'est-à-dire ceux dont la dernière mise à jour est inférieure à n_update."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -463,7 +460,7 @@
   },
   {
    "source": [
-    "On remarque qu'à partir d'un seul passage sur le corpus, on descend en dessous de 5% d'erreurs, et qu'à 3 itérations on est environ à 4%. Des itérations additionnelles n'améliorent pas beaucoup ce taux, en tout cas pas assez par rapport au temps additionnel que demande l'entraînement avec ces itérations additionnelles. Nous choisissont donc 3 itérations par défaut."
+    "On remarque qu'à partir d'un seul passage sur le corpus, on descend en dessous de 5% d'erreurs, et qu'à 3 itérations on est environ à 4%. Des itérations additionnelles n'améliorent pas beaucoup ce taux, en tout cas pas assez par rapport au temps additionnel que demande l'entraînement avec ces itérations additionnelles. Nous choisissons donc 3 itérations par défaut."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -471,7 +468,7 @@
   {
    "source": [
     "### Evaluation des caractéristiques\n",
-    "On peut se demander si on pourrait obtenir des taux similaires avec moins de features, si certaines features apportent plus de précision que d'autre. Pour cela on réeffectue un apprentissage avec 3 itérations, sans modifier l'extraction de caractéristiques. Puis on teste différentes combinaisons d'extractions de features sur le corpus dev avant d'effectuer le test : seulement les mots (mot, mot précédent et mot suivant), et tout sauf les mots. On pourrait bien sûr tester bien d'autres combinaisons. Les features non extraites sur le corpus dev valent donc toutes zéro pour ce corpus et ne seront pas prises en compte."
+    "On peut se demander si l'on pourrait obtenir des taux similaires avec moins de features, si certaines features apportent plus de précision que d'autre. Pour cela on réeffectue un apprentissage avec 3 itérations, sans modifier l'extraction de caractéristiques. Puis on teste différentes combinaisons d'extractions de features sur le corpus dev avant d'effectuer le test : seulement les mots (mot, mot précédent et mot suivant), et tout sauf les mots. On pourrait bien sûr tester bien d'autres combinaisons. Les features non extraites sur le corpus dev valent donc toutes zéro pour ce corpus et ne seront pas prises en compte."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -544,7 +541,7 @@
   },
   {
    "source": [
-    "A partir de ces tests non exhaustifs, il semblerait que la prise en compte des majuscules apporte davantage de précision, tandis que la prise en compte des autres caractéristiques seules, en plus des mots, apporte beaucoup moins de précision et pourrait peut-être être éliminée."
+    "A partir de ces tests non exhaustifs, il semblerait que la prise en compte des majuscules, en plus des mots, apporte davantage de précision que celle d'autres caractéristiques qui pourrait peut-être être éliminée."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -559,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {
     "tags": []
    },
